@@ -40,13 +40,16 @@ public class ScenarioAddedEventHandler implements HubEventHandler {
         ScenarioAddedEventAvro scenarioEvent = (ScenarioAddedEventAvro) event.getPayload();
         validateSensors(scenarioEvent.getConditions(), scenarioEvent.getActions(), event.getHubId());
 
-        Optional<Scenario> existingScenario = scenarioRepository.findByHubIdAndName(event.getHubId(), scenarioEvent.getName());
+        // Используем join fetch, чтобы сразу подгрузить условия и действия
+        Optional<Scenario> existingScenario = scenarioRepository
+                .findByHubIdAndNameWithConditionsAndActions(event.getHubId(), scenarioEvent.getName());
 
         List<Long> oldConditionIds = new ArrayList<>();
         List<Long> oldActionIds = new ArrayList<>();
 
         Scenario scenario = existingScenario
                 .map(existing -> {
+                    // Собираем старые id для последующего удаления
                     oldConditionIds.addAll(existing.getConditions().stream()
                             .map(Condition::getId)
                             .toList());
@@ -54,6 +57,7 @@ public class ScenarioAddedEventHandler implements HubEventHandler {
                             .map(Action::getId)
                             .toList());
 
+                    // Обновляем условия и действия
                     existing.setConditions(scenarioEvent.getConditions().stream()
                             .map(conditionAvro -> mapToCondition(existing, conditionAvro))
                             .toList());
@@ -72,8 +76,9 @@ public class ScenarioAddedEventHandler implements HubEventHandler {
         cleanupUnusedActions(oldActionIds);
     }
 
-
-    private void validateSensors(Collection<ScenarioConditionAvro> conditions, Collection<DeviceActionAvro> actions, String hubId) {
+    private void validateSensors(Collection<ScenarioConditionAvro> conditions,
+                                 Collection<DeviceActionAvro> actions,
+                                 String hubId) {
         List<String> conditionSensorIds = getConditionSensorIds(conditions);
         List<String> actionSensorIds = getActionSensorIds(actions);
 
@@ -86,21 +91,21 @@ public class ScenarioAddedEventHandler implements HubEventHandler {
     }
 
     private List<String> getConditionSensorIds(Collection<ScenarioConditionAvro> conditions) {
-        return conditions.stream().map(ScenarioConditionAvro::getSensorId).collect(Collectors.toList());
+        return conditions.stream().map(ScenarioConditionAvro::getSensorId).toList();
     }
 
     private List<String> getActionSensorIds(Collection<DeviceActionAvro> actions) {
-        return actions.stream().map(DeviceActionAvro::getSensorId).collect(Collectors.toList());
+        return actions.stream().map(DeviceActionAvro::getSensorId).toList();
     }
 
     private void cleanupUnusedConditions(Collection<Long> conditionIds) {
-        if (conditionIds != null && !conditionIds.isEmpty()) {
+        if (!conditionIds.isEmpty()) {
             conditionRepository.deleteAllById(conditionIds);
         }
     }
 
     private void cleanupUnusedActions(Collection<Long> actionIds) {
-        if (actionIds != null && !actionIds.isEmpty()) {
+        if (!actionIds.isEmpty()) {
             actionRepository.deleteAllById(actionIds);
         }
     }
@@ -115,21 +120,27 @@ public class ScenarioAddedEventHandler implements HubEventHandler {
         scenario.setActions(scenarioAddedEventAvro.getActions().stream()
                 .map(actionAvro -> mapToAction(scenario, actionAvro))
                 .toList());
-
         return scenario;
     }
 
     private Action mapToAction(Scenario scenario, DeviceActionAvro deviceActionAvro) {
+        // Берем существующий Sensor из репозитория
+        Sensor sensor = sensorRepository.findByIdAndHubId(deviceActionAvro.getSensorId(), scenario.getHubId())
+                .orElseThrow(() -> new RuntimeException("Sensor not found: " + deviceActionAvro.getSensorId()));
+
         return Action.builder()
-                .sensor(new Sensor(deviceActionAvro.getSensorId(), scenario.getHubId()))
+                .sensor(sensor)
                 .type(toActionType(deviceActionAvro.getType()))
                 .value(deviceActionAvro.getValue())
                 .build();
     }
 
     private Condition mapToCondition(Scenario scenario, ScenarioConditionAvro conditionAvro) {
+        Sensor sensor = sensorRepository.findByIdAndHubId(conditionAvro.getSensorId(), scenario.getHubId())
+                .orElseThrow(() -> new RuntimeException("Sensor not found: " + conditionAvro.getSensorId()));
+
         return Condition.builder()
-                .sensor(new Sensor(conditionAvro.getSensorId(), scenario.getHubId()))
+                .sensor(sensor)
                 .type(toConditionType(conditionAvro.getType()))
                 .operation(toConditionOperation(conditionAvro.getOperation()))
                 .value(getConditionValue(conditionAvro.getValue()))
@@ -150,15 +161,10 @@ public class ScenarioAddedEventHandler implements HubEventHandler {
     }
 
     private Integer getConditionValue(Object conditionValue) {
-        if (conditionValue == null) {
-            return null;
-        }
-        if (conditionValue instanceof Boolean) {
-            return ((Boolean) conditionValue ? 1 : 0);
-        }
-        if (conditionValue instanceof Integer) {
-            return (Integer) conditionValue;
-        }
+        if (conditionValue == null) return null;
+        if (conditionValue instanceof Boolean) return ((Boolean) conditionValue ? 1 : 0);
+        if (conditionValue instanceof Integer) return (Integer) conditionValue;
         throw new ClassCastException("Ошибка преобразования значения условия");
     }
 }
+
